--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' http://localhost:5000"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sniper</title>
 
