integraeted .env file.

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' http://localhost:3306"> -->
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' http://157.90.192.214:3306"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sniper</title>
 
