--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src 'self' http://157.90.192.214:3306"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sniper</title>
+    <title>Sandwich</title>
 
   </head>
   <body>
